    - SPH function for simple density computation added.

Mon Nov  9 18:57:21 IST 2009
    - function to align LocalReal particles to the begining of the a particle
      array added.

Tue Nov 10 15:39:51 IST 2009
    - tests updated to reflect above change in particle alignment.
    - get functions modified to get both real and all particles.
    - by default only real particles returned, when properties are accessed 
      as attributes.
    - setting of given carray with smaller sized numpy array made possible to
      incorporate setting values for only real particles.
    
Thursday 12 November 2009 (10:01:26 PM)
    - renamed/refactored add_component function from integrated to
      add_pre_step_components, add_post_step_component,
      add_pre_integration_component, add_post_integration_component. Now 
      functions names are a bit more clear.
    - convenience function "integrate" added to integraor class.
    - accessor/modifier functions to set various meta-information for
      components.
    - convenience inline function to generate Point class from given arrays.
    - density component class added - not complete
    
11/13/2009 (09:53:46 AM)
    - default behaviour of add_entity in solver component changed. It now adds
      all unfiltered entities to the solver component.
    - AttrDict added to facilitate property access from entity.
    - some modifications to density components - still not complete.
    - TaitPressureComponent written.
    - is_type_included function to EntityBase added.
    - separate module to hold speed of sound.

Sat Nov 14 03:18:53 IST 2009
    - SolverBase class created.
    - More and meaningful parameters added the the SolverComponent constructor.
    - SPHComponent class added - abstracts a lot of operations for any SPH
      component.
    - Basic SPH functions added.
    - SPH functions for pressure gradient computations added.
    - Tests for added source yet to be written.